--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node --experimental-modules --es-module-specifier-resolution=node index.js",
     "test": "jest"
   },
   "repository": {
